--- a/public/css/style.css
+++ b/public/css/style.css
@@ -214,6 +214,23 @@ i.nav_icon {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+a.questions{
+    margin-bottom: 10px;
+    color: #333;
+}
+a.questions:hover h2{
+    text-decoration: underline;
+    color: #000;
+}
+
+a.questions p {
+    font-size: .8rem; 
+    color: grey;
+}
+a.questions h2 {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
 span.nav-badge {
     font-size: 12px;
     color: #FFFFFF;
