--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,14 @@ h1, h2, h3 {margin: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 
+html {
+    height: 100%;
+}
+
+body {
+    min-height: 100%;
+}
+
 html, body{
 	font-family: 'PT Sans', sans-serif;
     font-size: 100%;
@@ -36,9 +44,6 @@ ul,label{
 body a:hover{
     text-decoration:none;
     cursor: pointer;
-}
-.main-content {
-    position: relative;
 }
 .sidebar-left .navbar-brand {
     height: 61px;
