Save chat image and message to state before uploading them

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -157,6 +157,7 @@ div.footer.messages {
 .messageItem.isMe {
     align-self: flex-end;
     justify-content: flex-end;
+    color: #fff;
 }
 
 .messageItem div {
