Added a header and footer to Login Route

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -109,6 +109,10 @@ div.footer.messages {
     display: none;
 }
 
+.mdl-card.mdl-shadow--2dp.firebaseui-container {
+    margin: 0;
+}
+
 @media (max-width: 1081px){
     .cbp-spmenu-push div#page-wrapper.consultation-on-going {
         margin-bottom: 100px;
