--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,12 +106,12 @@ button#showLeftPush {
     text-align: center;
     cursor: pointer;
     float: left;
-    color: #fff;
+    color: #000;
     -moz-transition: all 0.2s ease-out 0s;
     -webkit-transition: all 0.2s ease-out 0s;
     transition: all 0.2s ease-out 0s;
 	border: none;
-    background-color: #F2B33F;
+    background-color: #fff;
 	outline:none;
     border-radius: 50%;
     height: 40px;
