--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -182,3 +182,86 @@ div.footer.messages {
     height: auto;
     max-height: 400px;
 }
+
+.consultation-wrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.consultation-wrapper .main-page{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex: 1
+}
+
+.consultation-wrapper .blank-page{
+    flex: 1;
+    display: flex;
+    align-items: flex-end;
+}
+
+.consultation-wrapper .webrtc-wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0,0,0,.98);
+}
+
+.consultation-wrapper .webrtc-wrapper .OTSubscriberContainer{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    min-height: 100%!important;
+    height: auto!important;
+    width: 100%!important;
+}
+
+.consultation-wrapper .webrtc-wrapper .OTPublisherContainer{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    min-height: 20%!important;
+    width: 20%!important;
+    z-index: 100;
+    height: auto!important;
+}
+
+.consultation-wrapper .webrtc-wrapper.webrtc-audio .OTPublisherContainer{
+    display: none;
+}
+
+.consultation-wrapper .webrtc-wrapper .subscriberProfilePhoto{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.consultation-wrapper .webrtc-wrapper .close-btn{
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.consultation-wrapper .webrtc-wrapper .close-btn button{
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    font-size: 2.3em;
+}
